fix double scroll

--- a/main.css
+++ b/main.css
@@ -20,10 +20,18 @@
     src: url(fonts/Roboto/Roboto-Black.ttf);
 }
 
-html,body{
+/* body{
     width: 100%;
     overflow-x: hidden;
+    height: 100%;
+} */
+/* html{
+   
+    overflow-x: hidden;
 }
+body{
+  overflow-x: hidden;
+} */
 
 
 /* remove list styles all items in
@@ -65,7 +73,7 @@ the same column */
     grid-template-rows: 1fr 1fr 1fr 1fr;
     gap: 1px 1px;
     height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden; */
     
 }
 
@@ -320,6 +328,7 @@ and (-webkit-min-device-pixel-ratio: 1.5)  {
 
   .skills-cont{
     margin-left: 1.3%;
+    margin-bottom: 5%;
   }
   
   .my-skills {
